fixed board view on mobile

--- a/css/board.css
+++ b/css/board.css
@@ -492,6 +492,7 @@ textarea {
 
     .box-overflow {
         max-height: unset;
+        height: unset;
     }
 }
 
